@@ -1,3 +1,6 @@
+13 April 2018: Wouter
+	- Fix for max include depth for authzones.
+
 10 April 2018: Ralph
 	- num.query.aggressive.NOERROR and num.query.aggressive.NXDOMAIN
 	  statistics counters.
